Fixed images overlap issue on celebrity issue

--- a/app/design/frontend/Emthemes/everything/beauty/web/css/source/_celebmasonry.less
+++ b/app/design/frontend/Emthemes/everything/beauty/web/css/source/_celebmasonry.less
@@ -102,5 +102,5 @@
 }
 
 .category-boutiqaat-celebrities .gridmason {
-    margin-bottom: -18em;
+    margin-bottom: 0;
 }
